# testTask

./: CMakeLists.txt  README.md
include/: base.h
source/: base.cpp  main.cpp
